# ai.cycling.workout.planner

./: .claudeignore  .clauderules  .cursorrules  .dockerignore  .env.example  .gitignore  BUG_FIXES_APPLIED.md  CLAUDE.md  CLAUDE_SKILLS.md  Dockerfile.backend  Dockerfile.frontend  NAN_FIX_SUMMARY.md  PROFILE_SELECTION_FIX_SUMMARY.md  RATE_LIMIT_FIX.md  README.md  REFACTORING_PROPOSAL.md  SCRAPER_FIX_SUMMARY.md  TODO.md  TOOLS_SETUP.md  WEEKLY_PLAN_BUG_REPORT.md  cloudbuild.yaml  docker-compose.yml  menu_prompt.md  package-lock.json  package.json  plans_backup2.py  pyproject.toml  requirements.txt  run.py  run.sh  run_backend.sh  run_frontend.sh  srs.md  test_workout.py  uploaded_workout.json  vercel.json
.claude/: kanban.json
api/: __init__.py  constants.py  i18n.py  main.py  middleware.py  schemas.py
data/: module_usage_stats.json  workout_profiles.db.backup_20260215_122949
docs/: FRONTEND_OPTIMIZATION.md  README.md  SRS.md  TODO.md  UPDATE_SYSTEM_README.md  WEEKLY_PLAN_BUG_REPORT.md  architecture.md  deployment_guide.md  infrastructure.md  worklog.md  zwift_import_summary.md
frontend/: .env.test  capacitor.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vercel.json  vite.config.ts
scripts/: README.md  cleanup_type_field.py  enrich_profiles.py  generate_module_variations.py  generate_pro_workout_blocks.py  import_intervals_workouts.py  import_zwo.py  migrate_db_format.py  repair_sufferfest_profiles.py  scrape_whatsonzwift.py  scrape_whatsonzwift_v2.py  seed_profiles.py  standardize_modules.py  view_module_stats.py
(+341 files in other folders)
